output/facebook/rocksdb/issues/186.txt
Compiling rocksdb with `g++ -O3` (g++ (Ubuntu 4.8.2-19ubuntu1) 4.8.2) yields:

```
g++ -g -Wall -Werror -I. -I./include -std=c++11  -DROCKSDB_PLATFORM_POSIX  -DOS_LINUX -fno-builtin-memcmp -DROCKSDB_ATOMIC_PRESENT -DROCKSDB_FALLOCATE_PRESENT -DSNAPPY -DGFLAGS=google -DZLIB -DBZIP2   -DHAVE_JEMALLOC -O3 -fno-omit-frame-pointer -momit-leaf-frame-pointer -Woverloaded-virtual -c table/plain_table_key_coding.cc -o table/plain_table_key_coding.o 
table/plain_table_key_coding.cc: In member function ‘rocksdb::Status rocksdb::PlainTableKeyDecoder::NextPlainEncodingKey(const char*, const char*, rocksdb::ParsedInternalKey*, rocksdb::Slice*, size_t*, bool*)’:
table/plain_table_key_coding.cc:210:5: error: ‘decoded_internal_key_valid’ may be used uninitialized in this function [-Werror=maybe-uninitialized]
     if (decoded_internal_key_valid) {
     ^
table/plain_table_key_coding.cc: In member function ‘rocksdb::Status rocksdb::PlainTableKeyDecoder::NextKey(const char*, const char*, rocksdb::ParsedInternalKey*, rocksdb::Slice*, size_t*, bool*)’:
table/plain_table_key_coding.cc:210:5: error: ‘decoded_internal_key_valid’ may be used uninitialized in this function [-Werror=maybe-uninitialized]
table/plain_table_key_coding.cc:201:8: note: ‘decoded_internal_key_valid’ was declared here
   bool decoded_internal_key_valid;
        ^
cc1plus: all warnings being treated as errors
make: *** [table/plain_table_key_coding.o] Error 1
```

thanks for reporting. Patch is here https://reviews.facebook.net/D19467

This is fixed, thanks for reporting @ivan 

